2009-12-16  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed, build fix.

        [Chromium] Add EditableTextRole to catch up with
        http://trac.webkit.org/changeset/52233

        * public/WebAccessibilityRole.h:
        (WebKit::): Added WebAccessibilityRoleEditableText
        * src/AssertMatchingEnums.cpp: Added matching compile assert.

2009-12-15  Kenneth Russell  <kbr@google.com>

        Reviewed by Darin Fisher.

        Don't allow default framebuffer to be mutated
        https://bugs.webkit.org/show_bug.cgi?id=32391

        * src/GraphicsContext3D.cpp:
        (WebCore::GraphicsContext3DInternal::GraphicsContext3DInternal):
        (WebCore::GraphicsContext3DInternal::reshape):
        (WebCore::GraphicsContext3DInternal::beginPaint):
        (WebCore::GraphicsContext3DInternal::bindFramebuffer):
        (WebCore::GraphicsContext3D::bindFramebuffer):

2009-12-15  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, build fix.

        [Chromium] Add TreeGridRole to catch up with
        http://trac.webkit.org/changeset/52159.

        * public/WebAccessibilityRole.h:
        (WebKit::): Added WebAccessibilityRoleTreeGrid.
        * src/AssertMatchingEnums.cpp: Added matching compile assert.

2009-12-15  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitry Titov.

        Bug 31090 - [Chromium] Add DownloadURL format to Chromium clipboard.
        https://bugs.webkit.org/show_bug.cgi?id=31090

        The proposal to whatwg can be found here:
        http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/2009-August/022118.html

        * public/WebDragData.h:
        * src/WebDragData.cpp:
        (WebKit::WebDragData::downloadURL):
        (WebKit::WebDragData::setDownloadURL):

2009-12-14  Evan Stade  <estade@chromium.org>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=32347
        Chromium: Context menu launched by menu key has funky behavior
