@@ -1,3 +1,13 @@
+2009-12-17  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by David Levin.
+
+        Provide explicit implementation of 'non-template' WebVector<T>::operator=
+
+        https://bugs.webkit.org/show_bug.cgi?id=32363
+
+        * public/WebVector.h:
+
 2009-12-16  Fumitoshi Ukai  <ukai@chromium.org>
 
         Unreviewed, build fix.
